[package]
name = "headless-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^4"
uuid = { version = "^0.8", features = ["v4"]}
serde = {version = "^1", features = ["derive"]}
diesel = { version = "2.0.0", features = ["postgres"] }
jsonwebtoken = "8"
markdown = "1.0.0-alpha.6"